--- a/HPA/test-output/Page Object test example/methods-alphabetical.html
+++ b/HPA/test-output/Page Object test example/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98e57f">  <td>15/07/23 10:32:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;com.pack.base.TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)">&gt;&gt;initializeTestBaseSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265210847</td>   <td></td> </tr>
-<tr bgcolor="a68bd9">  <td>15/07/23 10:33:34</td>   <td>74177</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;com.pack.common.tests.SignInPageTest.setUp()">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265210847</td>   <td></td> </tr>
-<tr bgcolor="98e57f">  <td>15/07/23 10:33:37</td>   <td>77451</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;com.pack.base.TestBaseSetup.tearDown()">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265210847</td>   <td></td> </tr>
-<tr bgcolor="a68bd9">  <td>15/07/23 10:33:34</td>   <td>74182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.pack.common.tests.SignInPageTest.verifySignInFunction()">verifySignInFunction</td> 
-  <td>main@1265210847</td>   <td></td> </tr>
+<tr bgcolor="939799">  <td>15/07/27 11:26:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.pack.common.tests.TestLogin.LoginFunction()">LoginFunction</td> 
+  <td>main@1911728085</td>   <td></td> </tr>
+<tr bgcolor="6ea0c6">  <td>15/07/27 11:25:47</td>   <td>-14658</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;com.pack.base.TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)">&gt;&gt;initializeTestBaseSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911728085</td>   <td></td> </tr>
+<tr bgcolor="939799">  <td>15/07/27 11:26:02</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;com.pack.common.tests.TestLogin.setUp()">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911728085</td>   <td></td> </tr>
+<tr bgcolor="6ea0c6">  <td>15/07/27 11:26:03</td>   <td>1255</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;com.pack.base.TestBaseSetup.tearDown()">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911728085</td>   <td></td> </tr>
 </table>
