--- a/HPA/test-output/old/Page Object test example/methods.html
+++ b/HPA/test-output/old/Page Object test example/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63be87">  <td>15/07/27 15:18:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)[pri:0, instance:com.pack.common.tests.TestLogin@7e0babb1]">&gt;&gt;initializeTestBaseSetup</td> 
+<tr bgcolor="63be87">  <td>15/07/28 16:44:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">&gt;&gt;initializeTestBaseSetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032616650</td>   <td></td> </tr>
-<tr bgcolor="67b690">  <td>15/07/27 15:19:00</td>   <td>16144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestLogin.setUp()[pri:0, instance:com.pack.common.tests.TestLogin@7e0babb1]">&gt;&gt;setUp</td> 
+<tr bgcolor="67b690">  <td>15/07/28 16:44:59</td>   <td>34296</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployerQuickRegTest.setUp()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032616650</td>   <td></td> </tr>
-<tr bgcolor="67b690">  <td>15/07/27 15:19:00</td>   <td>16150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.LoginWithIncorrectAssociatedSocialMediaAccount()[pri:0, instance:com.pack.common.tests.TestLogin@7e0babb1]">LoginWithIncorrectAssociatedSocialMediaAccount</td> 
+<tr bgcolor="67b690">  <td>15/07/28 16:44:59</td>   <td>34303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployerQuickRegTest.TestEmpReg()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">TestEmpReg</td> 
   <td>main@1032616650</td>   <td></td> </tr>
-<tr bgcolor="63be87">  <td>15/07/27 15:19:24</td>   <td>40130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseSetup.tearDown()[pri:0, instance:com.pack.common.tests.TestLogin@7e0babb1]">&lt;&lt;tearDown</td> 
+<tr bgcolor="63be87">  <td>15/07/28 16:45:11</td>   <td>46396</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseSetup.tearDown()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032616650</td>   <td></td> </tr>
 </table>
