--- a/HPA/test-output/index.html
+++ b/HPA/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Page_Object_test_example">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpReg">TestEmpReg</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpQuickRegFullstages">TestEmpQuickRegFullstages</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Page_Object_test_example -->
@@ -124,9 +124,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestEmpReg">
-                  </a> <!-- TestEmpReg -->
-                  <span class="method-name">TestEmpReg</span>
+                  <a name="TestEmpQuickRegFullstages">
+                  </a> <!-- TestEmpQuickRegFullstages -->
+                  <span class="method-name">TestEmpQuickRegFullstages</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestEmpReg')
+data.setCell(0, 1, 'TestEmpQuickRegFullstages')
 data.setCell(0, 2, 'com.pack.common.tests.EmployerQuickRegTest')
-data.setCell(0, 3, 12089);
+data.setCell(0, 3, 52683);
 window.suiteTableData['Page_Object_test_example']= { tableData: data, tableDiv: 'times-div-Page_Object_test_example'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 52 seconds</span>
               <div id="times-div-Page_Object_test_example">
               </div> <!-- times-div-Page_Object_test_example -->
             </div> <!-- times-div -->
@@ -227,15 +227,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">34295 ms</span>
+                <span class="method-start">13841 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TestEmpReg</span>
-                <span class="method-start">34303 ms</span>
+                <span class="method-name">TestEmpQuickRegFullstages</span>
+                <span class="method-start">13847 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">46395 ms</span>
+                <span class="method-start">66533 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
