--- a/HPA/test-output/old/Default suite/methods-alphabetical.html
+++ b/HPA/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7dea0">  <td>15/07/29 12:27:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployerQuickRegTest.TestEmpReg()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@6debcae2]">TestEmpReg</td> 
+<tr bgcolor="b7dea0">  <td>15/07/30 10:58:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployerQuickRegTest.TestEmpQuickRegFullstages()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@6debcae2]">TestEmpQuickRegFullstages</td> 
   <td>main@99347477</td>   <td></td> </tr>
 </table>
