Quick Reg 1st and 2nd stages

--- a/HPA/test-output/index.html
+++ b/HPA/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Page_Object_test_example">
-                    <span>C:\Users\Harri\Documents\GitHub\HarriPortalAutomation\HPA\testng.xml</span>
+                    <span>C:\Users\LENOVO\Documents\GitHub\HarriPortalAutomation\HPA\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Page_Object_test_example">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpQuickRegFullstages">TestEmpQuickRegFullstages</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.SignInPageTest" hash-for-method="verifySignInFunction">verifySignInFunction</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Page_Object_test_example -->
@@ -119,14 +119,14 @@
           <div class="suite-Page_Object_test_example-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.pack.common.tests.EmployerQuickRegTest</span>
+              <span class="class-name">com.pack.common.tests.SignInPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestEmpQuickRegFullstages">
-                  </a> <!-- TestEmpQuickRegFullstages -->
-                  <span class="method-name">TestEmpQuickRegFullstages</span>
+                  <a name="verifySignInFunction">
+                  </a> <!-- verifySignInFunction -->
+                  <span class="method-name">verifySignInFunction</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,18 +134,18 @@
         </div> <!-- panel Page_Object_test_example -->
         <div panel-name="test-xml-Page_Object_test_example" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Harri\Documents\GitHub\HarriPortalAutomation\HPA\testng.xml</span>
+            <span class="header-content">C:\Users\LENOVO\Documents\GitHub\HarriPortalAutomation\HPA\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Page Object test example&quot;&gt;
-  &lt;parameter name=&quot;appURL&quot; value=&quot;http://beta.harri.com&quot;/&gt;
+  &lt;parameter name=&quot;appURL&quot; value=&quot;http://beta.harri.com/Zan-Resturant-And-Pub/job/502452-karmi/apply/502452&quot;/&gt;
   &lt;parameter name=&quot;browserType&quot; value=&quot;chrome&quot;/&gt;
   &lt;test name=&quot;sample test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.pack.common.tests.EmployerQuickRegTest&quot;/&gt;
+      &lt;class name=&quot;com.pack.common.tests.SignInPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- sample test --&gt;
 &lt;/suite&gt; &lt;!-- Page Object test example --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestEmpQuickRegFullstages')
-data.setCell(0, 2, 'com.pack.common.tests.EmployerQuickRegTest')
-data.setCell(0, 3, 52683);
+data.setCell(0, 1, 'verifySignInFunction')
+data.setCell(0, 2, 'com.pack.common.tests.SignInPageTest')
+data.setCell(0, 3, 39650);
 window.suiteTableData['Page_Object_test_example']= { tableData: data, tableDiv: 'times-div-Page_Object_test_example'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 seconds</span>
+              <span class="suite-total-time">Total running time: 39 seconds</span>
               <div id="times-div-Page_Object_test_example">
               </div> <!-- times-div-Page_Object_test_example -->
             </div> <!-- times-div -->
@@ -220,22 +220,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.pack.common.tests.EmployerQuickRegTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.pack.common.tests.SignInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">initializeTestBaseSetup(chrome, http://beta.harri.com)</span>
+                <span class="method-name">initializeTestBaseSetup(chrome, http://beta.harri.com/Zan-Resturant-And-Pub/job/502452-karmi/apply/502452)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">13841 ms</span>
+                <span class="method-start">61306 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TestEmpQuickRegFullstages</span>
-                <span class="method-start">13847 ms</span>
+                <span class="method-name">verifySignInFunction</span>
+                <span class="method-start">63324 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">66533 ms</span>
+                <span class="method-start">103106 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
