--- a/HPA/test-output/old/Page Object test example/classes.html
+++ b/HPA/test-output/old/Page Object test example/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.pack.common.tests.EmployerQuickRegTest</td>
+<td>com.pack.common.tests.SignInPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestEmpQuickRegFullstages</td>
+<td>verifySignInFunction</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
