--- a/HPA/test-output/old/Page Object test example/methods-alphabetical.html
+++ b/HPA/test-output/old/Page Object test example/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67b690">  <td>15/07/29 15:22:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployerQuickRegTest.TestEmpQuickRegFullstages()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">TestEmpQuickRegFullstages</td> 
-  <td>main@1032616650</td>   <td></td> </tr>
-<tr bgcolor="63be87">  <td>15/07/29 15:22:30</td>   <td>-13840</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">&gt;&gt;initializeTestBaseSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032616650</td>   <td></td> </tr>
-<tr bgcolor="67b690">  <td>15/07/29 15:22:44</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployerQuickRegTest.setUp()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032616650</td>   <td></td> </tr>
-<tr bgcolor="63be87">  <td>15/07/29 15:23:36</td>   <td>52686</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseSetup.tearDown()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@7e0babb1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032616650</td>   <td></td> </tr>
+<tr bgcolor="c6a873">  <td>15/08/05 13:41:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)[pri:0, instance:com.pack.common.tests.SignInPageTest@5ba23b66]">&gt;&gt;initializeTestBaseSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
+<tr bgcolor="b7dea0">  <td>15/08/05 13:42:34</td>   <td>61292</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInPageTest.setUp()[pri:0, instance:com.pack.common.tests.SignInPageTest@5ba23b66]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
+<tr bgcolor="c6a873">  <td>15/08/05 13:43:16</td>   <td>103091</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseSetup.tearDown()[pri:0, instance:com.pack.common.tests.SignInPageTest@5ba23b66]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
+<tr bgcolor="b7dea0">  <td>15/08/05 13:42:36</td>   <td>63309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInPageTest.verifySignInFunction()[pri:0, instance:com.pack.common.tests.SignInPageTest@5ba23b66]">verifySignInFunction</td> 
+  <td>main@940553268</td>   <td></td> </tr>
 </table>
