--- a/HPA/test-output/index.html
+++ b/HPA/test-output/index.html
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Page_Object_test_example">
-              <span class="suite-name border-passed">Page Object test example</span>
+              <span class="suite-name border-skipped">Page Object test example</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method,  1 skipped,  </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Page_Object_test_example" class="hide-methods passed suite-Page_Object_test_example"> (hide)</a> <!-- hide-methods passed suite-Page_Object_test_example -->
-                      <a href="#" panel-name="suite-Page_Object_test_example" class="show-methods passed suite-Page_Object_test_example"> (show)</a> <!-- show-methods passed suite-Page_Object_test_example -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Page_Object_test_example" class="hide-methods skipped suite-Page_Object_test_example"> (hide)</a> <!-- hide-methods skipped suite-Page_Object_test_example -->
+                      <a href="#" panel-name="suite-Page_Object_test_example" class="show-methods skipped suite-Page_Object_test_example"> (show)</a> <!-- show-methods skipped suite-Page_Object_test_example -->
                     </span>
-                    <div class="method-list-content passed suite-Page_Object_test_example">
+                    <div class="method-list-content skipped suite-Page_Object_test_example">
                       <span>
-                        <img width="3%" src="passed.png"/>
+                        <img width="3%" src="skipped.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpQuickRegFullstages">TestEmpQuickRegFullstages</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Page_Object_test_example -->
+                    </div> <!-- method-list-content skipped suite-Page_Object_test_example -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,9 +116,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Page_Object_test_example" class="panel Page_Object_test_example">
-          <div class="suite-Page_Object_test_example-class-passed">
+          <div class="suite-Page_Object_test_example-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="skipped.png"/>
               <span class="class-name">com.pack.common.tests.EmployerQuickRegTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -130,7 +130,7 @@
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Page_Object_test_example-class-passed -->
+          </div> <!-- suite-Page_Object_test_example-class-skipped -->
         </div> <!-- panel Page_Object_test_example -->
         <div panel-name="test-xml-Page_Object_test_example" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestEmpQuickRegFullstages')
 data.setCell(0, 2, 'com.pack.common.tests.EmployerQuickRegTest')
-data.setCell(0, 3, 100615);
+data.setCell(0, 3, 0);
 window.suiteTableData['Page_Object_test_example']= { tableData: data, tableDiv: 'times-div-Page_Object_test_example'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 0 ms</span>
               <div id="times-div-Page_Object_test_example">
               </div> <!-- times-div-Page_Object_test_example -->
             </div> <!-- times-div -->
@@ -222,21 +222,15 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.pack.common.tests.EmployerQuickRegTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">initializeTestBaseSetup(chrome, http://beta.harri.com)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
-              <div class="configuration-class before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">17702 ms</span>
-              </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">TestEmpQuickRegFullstages</span>
-                <span class="method-start">17717 ms</span>
+                <span class="method-start">413 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">118334 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
