update employer quick registration

--- a/HPA/test-output/index.html
+++ b/HPA/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Page_Object_test_example">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpRegFirstStage">TestEmpRegFirstStage</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpQuickRegFullstages">TestEmpQuickRegFullstages</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Page_Object_test_example -->
@@ -124,9 +124,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestEmpRegFirstStage">
-                  </a> <!-- TestEmpRegFirstStage -->
-                  <span class="method-name">TestEmpRegFirstStage</span>
+                  <a name="TestEmpQuickRegFullstages">
+                  </a> <!-- TestEmpQuickRegFullstages -->
+                  <span class="method-name">TestEmpQuickRegFullstages</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestEmpRegFirstStage')
+data.setCell(0, 1, 'TestEmpQuickRegFullstages')
 data.setCell(0, 2, 'com.pack.common.tests.EmployerQuickRegTest')
-data.setCell(0, 3, 47);
+data.setCell(0, 3, 117288);
 window.suiteTableData['Page_Object_test_example']= { tableData: data, tableDiv: 'times-div-Page_Object_test_example'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 ms</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Page_Object_test_example">
               </div> <!-- times-div-Page_Object_test_example -->
             </div> <!-- times-div -->
@@ -227,17 +227,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">71207 ms</span>
+                <span class="method-start">28439 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TestEmpRegFirstStage</span>
-                <span class="method-start">71208 ms</span>
+                <span class="method-name">TestEmpQuickRegFullstages</span>
+                <span class="method-start">28446 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">tearDown</span>
-                <span class="method-start">71271 ms</span>
+                <span class="method-start">145734 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
