--- a/HPA/test-output/index.html
+++ b/HPA/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Page_Object_test_example">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmployerQuickRegTest" hash-for-method="TestEmpQuickRegFullstages">TestEmpQuickRegFullstages</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_test_example" title="com.pack.common.tests.EmpFullRegTest" hash-for-method="SBSLTest">SBSLTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Page_Object_test_example -->
@@ -119,14 +119,14 @@
           <div class="suite-Page_Object_test_example-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.pack.common.tests.EmployerQuickRegTest</span>
+              <span class="class-name">com.pack.common.tests.EmpFullRegTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestEmpQuickRegFullstages">
-                  </a> <!-- TestEmpQuickRegFullstages -->
-                  <span class="method-name">TestEmpQuickRegFullstages</span>
+                  <a name="SBSLTest">
+                  </a> <!-- SBSLTest -->
+                  <span class="method-name">SBSLTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -145,7 +145,7 @@
   &lt;parameter name=&quot;browserType&quot; value=&quot;chrome&quot;/&gt;
   &lt;test name=&quot;sample test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.pack.common.tests.EmployerQuickRegTest&quot;/&gt;
+      &lt;class name=&quot;com.pack.common.tests.EmpFullRegTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- sample test --&gt;
 &lt;/suite&gt; &lt;!-- Page Object test example --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestEmpQuickRegFullstages')
-data.setCell(0, 2, 'com.pack.common.tests.EmployerQuickRegTest')
-data.setCell(0, 3, 117288);
+data.setCell(0, 1, 'SBSLTest')
+data.setCell(0, 2, 'com.pack.common.tests.EmpFullRegTest')
+data.setCell(0, 3, 150451);
 window.suiteTableData['Page_Object_test_example']= { tableData: data, tableDiv: 'times-div-Page_Object_test_example'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Page_Object_test_example">
               </div> <!-- times-div-Page_Object_test_example -->
             </div> <!-- times-div -->
@@ -220,22 +220,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.pack.common.tests.EmployerQuickRegTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.pack.common.tests.EmpFullRegTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initializeTestBaseSetup(chrome, http://beta.harri.com)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">28439 ms</span>
+                <span class="method-start">20653 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TestEmpQuickRegFullstages</span>
-                <span class="method-start">28446 ms</span>
+                <span class="method-name">SBSLTest</span>
+                <span class="method-start">20664 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">145734 ms</span>
+                <span class="method-start">171123 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
