--- a/HPA/test-output/old/Page Object test example/methods.html
+++ b/HPA/test-output/old/Page Object test example/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78ef96">  <td>15/10/28 12:55:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@6fffcba5]">&gt;&gt;initializeTestBaseSetup</td> 
+<tr bgcolor="78ef96">  <td>15/10/29 15:40:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseSetup.initializeTestBaseSetup(java.lang.String, java.lang.String)[pri:0, instance:com.pack.common.tests.EmpFullRegTest@6fffcba5]">&gt;&gt;initializeTestBaseSetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="e579dc">  <td>15/10/28 12:56:18</td>   <td>28424</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployerQuickRegTest.setUp()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@6fffcba5]">&gt;&gt;setUp</td> 
+<tr bgcolor="e579dc">  <td>15/10/29 15:40:43</td>   <td>20640</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmpFullRegTest.setUp()[pri:0, instance:com.pack.common.tests.EmpFullRegTest@6fffcba5]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="e579dc">  <td>15/10/28 12:56:18</td>   <td>28431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployerQuickRegTest.TestEmpQuickRegFullstages()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@6fffcba5]">TestEmpQuickRegFullstages</td> 
+<tr bgcolor="e579dc">  <td>15/10/29 15:40:43</td>   <td>20650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpFullRegTest.SBSLTest()[pri:0, instance:com.pack.common.tests.EmpFullRegTest@6fffcba5]">SBSLTest</td> 
   <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/10/28 12:58:15</td>   <td>145719</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseSetup.tearDown()[pri:0, instance:com.pack.common.tests.EmployerQuickRegTest@6fffcba5]">&lt;&lt;tearDown</td> 
+<tr bgcolor="78ef96">  <td>15/10/29 15:43:13</td>   <td>171110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseSetup.tearDown()[pri:0, instance:com.pack.common.tests.EmpFullRegTest@6fffcba5]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
 </table>
